--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-15 Oct 2025</p>
+22 Oct 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -3710,10 +3710,10 @@ enumerates their values.</p>
 <td>ef.asm</td>
 </tr>
 <tr>
-<td>VDADEV_FV</td>
+<td>VDADEV_TVGA</td>
 <td style="text-align: right;">0x07</td>
-<td>S100 FPGA VGA</td>
-<td>fv.asm</td>
+<td>S100 TRION FPGA VGA</td>
+<td>tvga.asm</td>
 </tr>
 <tr>
 <td>VDADEV_XOSERA</td>
@@ -5471,7 +5471,7 @@ identifier. The Status (A) is a standard HBIOS result code.</p>
 <td>Z80 RETRO COMPUTER</td>
 </tr>
 <tr>
-<td>PLT_S100</td>
+<td>PLT_SZ180</td>
 <td style="text-align: right;">16</td>
 <td>S100 COMPUTERS Z180</td>
 </tr>
@@ -5506,9 +5506,9 @@ identifier. The Status (A) is a standard HBIOS result code.</p>
 <td>NABU PC W/ ROMWBW OPTION BOARD</td>
 </tr>
 <tr>
-<td>PLT_FZ80</td>
+<td>PLT_SZ80</td>
 <td style="text-align: right;">23</td>
-<td>S100 FPGA Z80</td>
+<td>S100 COMPUTERS Z80</td>
 </tr>
 <tr>
 <td>PLT_RCEZ80</td>
