deploy: d0ac04045a4a9988a6cda80c6bade76adb9652d6

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -336,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-22 Oct 2025</p>
+29 Oct 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -3023,6 +3023,10 @@ instructions.</p>
 <tr>
 <td><code>VDCTEST.COM</code></td>
 <td>COLOR VDU TEST</td>
+</tr>
+<tr>
+<td><code>Z80TYPE.COM</code></td>
+<td>Z80 Chip Variant Detection</td>
 </tr>
 <tr>
 <td><code>ZEXALL.COM</code></td>
