deploy: 2de1c9b05d5b5830d3895c551f0c218897ae48aa

--- a/Catalog/index.html
+++ b/Catalog/index.html
@@ -318,7 +318,7 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-bs-level="2"><a href="#wordstar-4-word-processor" class="nav-link">WordStar 4 (Word processor)</a>
+            <li class="nav-item" data-bs-level="2"><a href="#word-processing" class="nav-link">Word Processing</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -336,7 +336,7 @@
 <p><strong>RomWBW Disk Catalog</strong> \
 Version 3.6 \
 Mark Pruden \&amp; Mykl Orders  (<a href="mailto:"></a>) \
-09 Nov 2025</p>
+25 Nov 2025</p>
 <h1 id="romwbw-distribution-file-catalog">RomWBW Distribution File Catalog</h1>
 <p>This document is a reference to the files found on the disk media
 distributed with RomWBW. Specifically, RomWBW provides a set of floppy
@@ -4003,13 +4003,13 @@ Turbo_Pascal_Version_3.0_Reference_Manual_1986.pdf</p>
 </tr>
 </tbody>
 </table>
-<h2 id="wordstar-4-word-processor">WordStar 4 (Word processor)</h2>
-<p>Floppy Disk Image: <strong>fd_ws4.img</strong><br />
-Hard Disk Image: <strong>hd_ws4.img</strong><br />
+<h2 id="word-processing">Word Processing</h2>
+<p>Floppy Disk Image: <strong>fd_wp.img</strong><br />
+Hard Disk Image: <strong>hd_wp.img</strong><br />
 Combo Disk Image: <strong>Slice 5</strong></p>
 <p>The following files are found in</p>
 <ul>
-<li>/Source/Images/d_ws4</li>
+<li>/Source/Images/d_wp</li>
 </ul>
 <table>
 <thead>
