--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -396,7 +396,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-09 Nov 2025</p>
+25 Nov 2025</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -4629,6 +4629,14 @@ the active platform and configuration.</p>
 <tr>
 <td>SIMRTC</td>
 <td>SIMH Simulator Real-Time Clock</td>
+</tr>
+<tr>
+<td>MMRTC</td>
+<td>NS MM58167B Real-Time Clock (no NVRAM)</td>
+</tr>
+<tr>
+<td>DS12RTC</td>
+<td>Dallas Semiconductor DS1288x Real-Time Clock w/ NVRAM</td>
 </tr>
 </tbody>
 </table>
