--- a/UserGuide/index.html
+++ b/UserGuide/index.html
@@ -527,7 +527,7 @@
 <p><strong>RomWBW User Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-09 Nov 2025</p>
+25 Nov 2025</p>
 <h4 id="preface">Preface</h4>
 <p>This document is a general usage guide for the RomWBW software and is
 generally the best place to start with RomWBW.</p>
@@ -2309,7 +2309,7 @@ The following table shows the disk images available.</p>
 <td>No</td>
 </tr>
 <tr>
-<td>xxx_ws4.img</td>
+<td>xxx_wp.img</td>
 <td>WordStar v4 &amp; ZDE Applications</td>
 <td>No</td>
 </tr>
