--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -400,7 +400,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-30 Nov 2025</p>
+09 Dec 2025</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -1264,7 +1264,7 @@ of the SIO ports, for ease of use with modern computers.</p>
 <h4 id="supported-hardware_5">Supported Hardware</h4>
 <ul>
 <li>FP: LEDIO=5</li>
-<li>PLDSER: IO=172</li>
+<li>DLPSER: IO=172</li>
 <li>SCC MODE=SZ80, IO=160, CHANNEL A</li>
 <li>SCC MODE=SZ80, IO=160, CHANNEL B</li>
 <li>SCON: IO=0</li>
@@ -1347,7 +1347,7 @@ of the SIO ports, for ease of use with modern computers.</p>
 <li>FP: LEDIO=255</li>
 <li>DS5RTC: RTCIO=104, IO=104</li>
 <li>TSER: IO=53</li>
-<li>PLDSER: IO=172</li>
+<li>DLPSER: IO=172</li>
 <li>SCC MODE=SZ80, IO=160, CHANNEL A</li>
 <li>SCC MODE=SZ80, IO=160, CHANNEL B</li>
 <li>LPT: MODE=T35, IO=199</li>
@@ -3622,7 +3622,7 @@ slave as defined by the IEEE-696 specs.</p>
 <h4 id="supported-hardware_35">Supported Hardware</h4>
 <ul>
 <li>INTRTC: ENABLED</li>
-<li>PLDSER: IO=172</li>
+<li>DLPSER: IO=172</li>
 <li>ASCI: IO=192, INTERRUPTS ENABLED</li>
 <li>ASCI: IO=193, INTERRUPTS ENABLED</li>
 <li>SCC MODE=SZ80, IO=160, CHANNEL A</li>
@@ -4439,8 +4439,8 @@ discovered by RomWBW in your system.</p>
 <td>Trion FPGA Serial Interface</td>
 </tr>
 <tr>
-<td>PLDSER</td>
-<td>PLD USB Serial Interface</td>
+<td>DLPSER</td>
+<td>DLP USB Serial Interface</td>
 </tr>
 <tr>
 <td>UART</td>
@@ -4471,7 +4471,7 @@ the active platform and configuration.</p>
 <li>ACIA: MC68B50 Asynchronous Communications Interface Adapter</li>
 <li>SSER: Simple Serial Interface</li>
 <li>TSER: Trion FPGA Serial Interface</li>
-<li>PLDSER: PLD USB Serial Interface</li>
+<li>DLPSER: DLP USB Serial Interface</li>
 <li>USB-FIFO: FT232H-based ECB USB FIFO</li>
 </ol>
 <h2 id="disk">Disk</h2>
