--- a/Hardware/index.html
+++ b/Hardware/index.html
@@ -400,7 +400,7 @@
 <p><strong>RomWBW Hardware</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-09 Dec 2025</p>
+10 Dec 2025</p>
 <h1 id="overview">Overview</h1>
 <h2 id="supported-platforms">Supported Platforms</h2>
 <p>This section contains a summary of the system configuration target for
@@ -4542,6 +4542,10 @@ the active platform and configuration.</p>
 <tr>
 <td>ESPSD</td>
 <td>S100 ESP32-based SD Card Interface</td>
+</tr>
+<tr>
+<td>SCSI</td>
+<td>5380 SCSI Interface</td>
 </tr>
 </tbody>
 </table>
