--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -189,7 +189,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-09 Dec 2025</p>
+10 Dec 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -570,6 +570,10 @@ let me know if I missed you!</p>
 </li>
 <li>
 <p>Henk Berends added support for the MSX platform.</p>
+</li>
+<li>
+<p>Jay Cotton provided the SCSI transport code upon which the SCSI driver
+  is based.</p>
 </li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
