--- a/SystemGuide/index.html
+++ b/SystemGuide/index.html
@@ -659,7 +659,7 @@
 <p><strong>RomWBW System Guide</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-09 Dec 2025</p>
+10 Dec 2025</p>
 <h1 id="overview">Overview</h1>
 <p>The objective of RomWBW is to provide firmware, operating systems, and
 applications targeting the Z80 family of CPUs. The firmware, in the form
@@ -2262,6 +2262,12 @@ enumerates their values.</p>
 <td style="text-align: right;">0x10</td>
 <td>S100 ESP32 SD Card</td>
 <td>espsd.asm</td>
+</tr>
+<tr>
+<td>DIODEV_SCSI</td>
+<td style="text-align: right;">0x11</td>
+<td>5380 SCSI Interface</td>
+<td>scsi.asm</td>
 </tr>
 </tbody>
 </table>
