--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <p><strong>RomWBW Introduction</strong> \
 Version 3.6 \
 Wayne Warthen  (<a href="mailto:wwarthen@gmail.com">wwarthen@gmail.com</a>) \
-09 Dec 2025</p>
+10 Dec 2025</p>
 <h1 id="overview">Overview</h1>
 <p>RomWBW software provides a complete, commercial quality implementation
 of CP/M (and work-alike) operating systems and applications for modern
@@ -561,6 +561,10 @@ let me know if I missed you!</p>
 <li>
 <p>Henk Berends added support for the MSX platform.</p>
 </li>
+<li>
+<p>Jay Cotton provided the SCSI transport code upon which the SCSI driver
+  is based.</p>
+</li>
 </ul>
 <h2 id="related-projects">Related Projects</h2>
 <p>Outside of the hardware platforms adapted to RomWBW, there are a variety
@@ -704,5 +708,5 @@ control system to ensure their contributions are clearly documented.</p>
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-12-10 01:59:44.246438+00:00
+Build Date UTC : 2025-12-11 01:24:40.344713+00:00
 -->
